--- a/index.html
+++ b/index.html
@@ -1,32 +1,14 @@
 <!DOCTYPE html>
-<html>
-
-  <head>
-    <title>Lab 5</title>
-  </head>
-
-  <body>
-    <h1>Lab 5</h1>
-
-    <h2>sum()</h2>
-    <p></p>
-
-    <h2>multiply()</h2>
-    <p></p>
-
-    <h2>sumAndMultiply()</h2>
-    <p></p>
-
-    <h2>sumArray()</h2>
-    <p></p>
-
-    <h2>multiplyArray()</h2>
-    <p></p>
-    
-    <h2>multiplyAnyArray()</h2>
-    <p></p>
-
-    <script src="js/tests.js" type="text/javascript"></script>
-    <script src="js/app.js" type="text/javascript"></script>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Document</title>
+</head>
+<body>
+  
+</body>
+<script src="js/app.js" type="text/javascript"></script>
 </html>
