--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <header>
+    <img src="/images/logo.png" alt="company-logo"><P></P><img src="/images/fb-icon.png" alt=""><img src="/images/twit-icon.png" alt=""><img src="/images/gp-icon.png" alt=""><img src="/images/insta-icon.png" alt=""><img src="/images/flic-icon.png" alt=""><img src="images/pint-icon.png" alt=""><img src="/images/rss-icon.png" alt=""><img src="images/mail-icon.png" alt="">
+  </header>
+
+  <main>
+    <img class="hero-img" src="images/choco-pizza.png" alt="" srcset="">
+    <p></p>
+    <img class="banner-img"src="" alt="" srcset=""> <ul>
+      <li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li>
+    </ul>
+  </main>
+  <footer>
+    <img class="woman" src="" alt=""><p></p><button>Share Recepe</button>
+  </footer>
 </body>
 <script src="js/app.js" type="text/javascript"></script>
 </html>
