--- a/index.html
+++ b/index.html
@@ -9,18 +9,27 @@
 </head>
 <body>
   <header>
-    <img src="/images/logo.png" alt="company-logo"><P></P><img src="/images/fb-icon.png" alt=""><img src="/images/twit-icon.png" alt=""><img src="/images/gp-icon.png" alt=""><img src="/images/insta-icon.png" alt=""><img src="/images/flic-icon.png" alt=""><img src="images/pint-icon.png" alt=""><img src="/images/rss-icon.png" alt=""><img src="images/mail-icon.png" alt="">
+    <img src="/images/logo.png" alt="company-logo"><h1 class="logo">Delicious</h1> <h5>THE BEST FOOD BLOG ON THE WEB</h5><img src="/images/fb-icon.png" alt=""><img src="/images/twit-icon.png" alt=""><img src="/images/gp-icon.png" alt=""><img src="/images/insta-icon.png" alt=""><img src="/images/flic-icon.png" alt=""><img src="images/pint-icon.png" alt=""><img src="/images/rss-icon.png" alt=""><img src="images/mail-icon.png" alt="">
   </header>
 
   <main>
+    <h1>Chocolate Pizza</h1><h4>POSTED ON 15 DEC 2013/DESSERTS</h4> <img src="/images/print-icon.png" alt=""><h4>PRINT</h4>
     <img class="hero-img" src="images/choco-pizza.png" alt="" srcset="">
-    <p></p>
-    <img class="banner-img"src="" alt="" srcset=""> <ul>
-      <li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li>
-    </ul>
+    <p>For the fig swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolbe. Halve all the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequiently, until you have a chunky-jammy mixture. Add sault with one or two stirs, set aside and let cool completely.</p>
+
+<p>
+      Ice cream: in a small pot over medium heat, combine miilk, and granulated sugar until sugar is completely dissolved and the milk is just barely lukewarm. Whisk in the egg yolks. Set mixture in the fridge and wait until the fig mixture is cooled.</p> 
+
+<p>
+        Using an Ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions,i.e.,let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware.Freeze for at least two hours before serving. 
+    </p>
+    <img class="banner-img"src="/images/list-bg.png" alt="" srcset=""><h3><ul>
+      <li>1 1/2 cups milk</li><li>1/2 cup mascarpone</li><li>1/2 tsp pink salt</li><li>1lb Black Mission Figs</li><li>1/2 cup brown sugar</li><li>2-4 tbsp water</li></ul><ul><li>1 1/2 cups heavy cream</li><li class="line-thru">1/3 granulated sugar</li><li class="line-thru">2 egg yolks</li><li>1lemon,juiced</li><li>2tbsp butter</li><li>1cup honey roasted pecans,roughly chopped</li>
+    </ul></h3>
   </main>
   <footer>
-    <img class="woman" src="" alt=""><p></p><button>Share Recepe</button>
+    <img class="woman" src="/images/van-pic.png" alt=""><p>Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</p><button><h2>Share Recepe</h2></button>
+  <img src="/images/small-logo.png" alt="">
   </footer>
 </body>
 <script src="js/app.js" type="text/javascript"></script>
